; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_udp_gc_thread_func.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_udp_gc_thread_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cfil_udp_gc_thread = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [12 x i8] c"CFIL_UPD_GC\00", align 1
@cfil_info_udp_expire = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @cfil_udp_gc_thread_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cfil_udp_gc_thread_func(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* @cfil_udp_gc_thread, align 8
  %6 = call i64 (...) @current_thread()
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @ASSERT(i32 %8)
  %10 = call i64 (...) @current_thread()
  %11 = call i32 @thread_set_thread_name(i64 %10, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @cfil_udp_gc_thread_sleep(i32 0)
  %13 = load i64, i64* @cfil_info_udp_expire, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @thread_block_parameter(i32 %14, i32* null)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @current_thread(...) #1

declare dso_local i32 @thread_set_thread_name(i64, i8*) #1

declare dso_local i32 @cfil_udp_gc_thread_sleep(i32) #1

declare dso_local i32 @thread_block_parameter(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
